<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailUser.DetailUserActivity">

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_detail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_user_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_user_detail"
        app:layout_constraintStart_toStartOf="@+id/iv_user_detail"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_detail" />

    <TextView
        android:id="@+id/tv_user_login_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/login"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_detail" />

    <TextView
        android:id="@+id/tv_user_location_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/location"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_login_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_user_login_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_login_detail" />

    <TableRow
        android:id="@+id/tr_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_location_detail"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/tv_user_location_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_location_detail">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/baseline_people_alt_24" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/following"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/_0" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/tr_following"
        app:layout_constraintEnd_toStartOf="@+id/tr_following"
        app:layout_constraintTop_toTopOf="@+id/tr_following"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/baseline_groups_24" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            tools:layout_editor_absoluteX="131dp" />

        <TextView
            android:id="@+id/tv_followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/_0" />
    </TableRow>

    <TableRow
        android:id="@+id/tr_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/tr_following"
        app:layout_constraintStart_toEndOf="@+id/tr_following"
        app:layout_constraintTop_toTopOf="@+id/tr_following">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="2dp"
            android:src="@drawable/baseline_folder_24" />

        <TextView
            android:id="@+id/tv_user_repository_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_repositories_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/_0" />
    </TableRow>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="272dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_location_detail"
        app:layout_constraintEnd_toStartOf="@+id/tv_user_location_detail"
        app:layout_constraintTop_toTopOf="@+id/tv_user_location_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>
